# movielens-api

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  admin.py  apps.py  models.py  paginations.py  signals.py
app/api/v1/serializers/: movies.py
app/api/v1/urls/: auth.py  movies.py
app/api/v1/views/: auth.py  movies.py
app/management/commands/: load_datasets.py
app/migrations/: 0001_initial.py  0002_rename_rating_rating_rate.py  0003_alter_rating_unique_together.py  0004_movie_imdb_id_movie_tmdb_id.py  0005_movie_year.py  0006_alter_movie_year.py  0007_alter_movie_unique_together.py
app/tests/: conftest.py
app/tests/api/v1/serializers/: test_serializers_auth.py  test_serializers_movies.py
app/tests/api/v1/views/: test_views_auth.py  test_views_movies.py
app/tests/utils/: test_load_datasets.py
app/utils/: load_datasets.py
core/: asgi.py  settings.py  urls.py  wsgi.py
